[package]
name = "frame_rs"
version = "0.1.2"
edition = "2021"
description = "A Frame wallet client written in rust to programmatically change the provider network for Frame's Omnichain setup."
license = "MIT"
repository = "https://github.com/AnonJon/frame-rs"
documentation = "https://docs.rs/frame-rs"

[dependencies]
ethers = "2.0.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.44"
reqwest = "0.11"
serde_json = "1.0"
